blurry button fix

--- a/src/app/containers/editor/editor.component.css
+++ b/src/app/containers/editor/editor.component.css
@@ -56,7 +56,7 @@
 }
 
 .header__button--addslide {
-    width: 160px;
+    width: 163px;
     margin-right: 15px;
     background: url('./app/images/btn-editor-addslide.png');
     background-size: 100%;
